Add sun.util.locale to add opens as needed by psi probe